
[[x6.0-smb]]
==== SMB Support

SMB support has been added from the Spring Integration Extensions project.
The Java DSL (see `org.springframework.integration.smb.dsl.Smb` factory) also has been added to this module.
An `SmbStreamingMessageSource` and `SmbOutboundGateway` implementation are introduced.
See <<./smb.adoc#smb,SMB Support>> for more information.

[[x6.0-jdbc]]
==== PostgreSQL Push Notification

A `PostgresSubscribableChannel` allows to receive push notifications via `PostgresChannelMessageTableSubscriber` upon new messages add to the `JdbcChannelMessageStore`.

See <<./jdbc.adoc#postgresql-push,PostgreSQL: Receiving Push Notifications>> for more information.

[[x6.0-rmq]]
==== RabbitMQ Stream Queue Support

The AMQP module has been enhanced to provide support for inbound and outbound channel adapters using RabbitMQ Stream Queues.
See <<./amqp.adoc#rmq-streams,RabbitMQ Stream Queue Support>> for more information.

[[x6.0-sftp]]
==== Apache MINA SFTP

The SFTP modules has been fully reworked from outdated JCraft JSch library to more robust and modern `org.apache.sshd:sshd-sftp` module of the Apache MINA project.

See <<./sftp.adoc#sftp,SFTP Adapters>> for more information.

[[x6.0-micrometer-observation]]
==== Micrometer Observation

Enabling observation for timers and tracing using Micrometer is now supported.
See <<./metrics.adoc#micrometer-observation,Micrometer Observation>> for more information.

[[x6.0-graalmv-polyglot]]
==== GraalVM Polyglot Support

The Scripting module now provides a `PolyglotScriptExecutor` implementation based on the GraalVM Polyglot support.
JavaScript support is now based on this executor since its JSR223 implementation has been removed from Java by itself.
See <<./scripting.adoc#scripting,Scripting Support>> for more information.

[[x6.0-cassandra]]
==== Apache Cassandra Support

The Apache Cassandra Spring Integration Extensions project has been migrated as the `spring-integration-cassandra` module.