@@ -16,6 +16,7 @@
 
 package org.springframework.integration.core;
 
+import org.springframework.aot.hint.annotation.Reflective;
 import org.springframework.integration.support.management.ManageableLifecycle;
 import org.springframework.jmx.export.annotation.ManagedAttribute;
 import org.springframework.jmx.export.annotation.ManagedOperation;
@@ -37,12 +38,14 @@ public interface Pausable extends ManageableLifecycle {
 	 * Pause the endpoint.
 	 */
 	@ManagedOperation(description = "Pause the component")
+	@Reflective
 	void pause();
 
 	/**
 	 * Resume the endpoint if paused.
 	 */
 	@ManagedOperation(description = "Resume the component")
+	@Reflective
 	void resume();
 
 	/**
@@ -51,6 +54,7 @@ public interface Pausable extends ManageableLifecycle {
 	 * @since 5.4
 	 */
 	@ManagedAttribute(description = "Is the component paused?")
+	@Reflective
 	default boolean isPaused() {
 		throw new UnsupportedOperationException("This component does not implement this method");
 	}
